--- a/style.css
+++ b/style.css
@@ -344,7 +344,7 @@ a {
             .adoption .box {
                 background-color: #303030;
 
-                width: 50%;
+                width: 500px;
 
                 padding: 25px 25px 50px 25px;
                 margin: 50px 0 50px 0;
